[package]
name = "metered-macro"
version = "0.9.0"
authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
license = "Apache-2.0 OR MIT"
readme = "../README.md"
keywords = ["metrics", "macro"]
repository = "https://github.com/magnet/metered-rs"
description = """
Fast, ergonomic metrics for Rust!
"""
categories = [
    "rust-patterns",
    "development-tools::profiling",
    "data-structures",
    "algorithms",
    "asynchronous",
]
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full"] }
aspect-weave = { git = "https://github.com/midnightexigent/aspect-rs", version = "0.3" }
synattra = { git = "https://github.com/magnet/synattra", version = "0.3" }
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.5"
indexmap = "2.7"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
metered = { path = "../metered" }
thiserror = "2.0"
rand = "0.9"

[features]
# When enabled, the error count macro will skip serializing cleared entries (e.g counters with value 0)
# This can be overridden with the `skip_cleared` macro attribute
error-count-skip-cleared-by-default = []

[lib]
proc-macro = true
